# LAB3

./: README.md
00_ArrayList/: .gitignore  CMakeLists.txt  main.c
Exercise/: 03_Integers_as_Binaries
Exercise/00_ArrayList/: bad_list.c  list.c  list.h
Exercise/01_HelloWorld/: 01_HelloWorld.typ
Exercise/01_HelloWorld/HelloWorldProject/: CMakeLists.txt
Exercise/02_Primes/: 02_Primes.typ  02_Primes_en.typ
Exercise/02_Primes/PrimesProject/: CMakeLists.txt  main.cpp
Exercise/03_Integers_as_Binaries/: 03_Exercise.typ  03_Exercise_en.typ
Exercise/03_Integers_as_Binaries/starter/: CMakeLists.txt  main.cpp
Exercise/04_Arrays_and_Structs/: 04_Arrays_and_Structs.typ  04_Arrays_and_Structs_en.typ
Exercise/04_Arrays_and_Structs/Starter/: CMakeLists.txt  main.cpp
Exercise/04_Arrays_and_Structs/Starter/Exercise1_Arrays/: Arrays.cpp  Arrays.h
Exercise/05_Pointers/: CMakeLists.txt  main.cpp
Exercise/06_Stack/: 06_Simple_Stack.typ  06_Simple_Stack_EN.typ
Exercise/06_Stack/Exercise_06/: CMakeLists.txt  Stack.cpp  Stack.h  main.cpp
Praktikum/01_PPM Image Output/: 01_PPM_ImageOutput.typ
Praktikum/01_PPM Image Output/Starter/: CMakeLists.txt  main.cpp
Praktikum/02_Raycast/Starter/: Vector3.cpp
Praktikum/03_HitSpheres/: 03_HitSpheres EN.typ  03_HitSpheres.typ
Praktikum/03_HitSpheres/Starter/: CMakeLists.txt  Camera.cpp  Camera.hpp  Intersection.cpp  Intersection.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  Sphere.cpp  Sphere.hpp  Vector3.cpp  Vector3.hpp  YourRayTracer.cpp  YourRayTracer.hpp  main.cpp
Uebung0/: test.cpp
(+1 files in other folders)
